# speech_api

./: Dockerfile  Dockerfile.lc  Dockerfile.pd  audioLib.py  database.py  debug.py  langTrans.py  main.py  models.py  path.py  pronouncing_pyphen.py  pronunciation_evaluation.py  pyannote_util.py  pyproject.toml  s3Upload.py
