[tool.poetry]
name = "speech-api"
version = "0.1.0"
description = ""
authors = ["gksdyd <gksdyd009@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.13"
uvicorn = "^0.34.3"
python-multipart = "^0.0.20"
speechrecognition = "^3.14.3"
boto3 = "^1.38.40"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
