[tool.poetry]
name = "speech-api"
version = "0.1.0"
description = ""
authors = ["gksdyd <gksdyd009@naver.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.13"
uvicorn = "^0.34.3"
python-multipart = "^0.0.20"
speechrecognition = "^3.14.3"
boto3 = "^1.38.45"
sqlalchemy = "^2.0.41"
pymysql = "^1.1.1"
googletrans = "^4.0.2"
pyannote-audio = "^3.3.2"
punctuators = "^0.0.7"
pydub = "^0.25.1"
python-dotenv = "^1.1.1"
safetensors = "^0.6.2"
praat-parselmouth = "^0.4.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"